@@ -261,3 +261,4 @@ http://m.news.cctv.com/2020/08/05/ARTInbk85I3vDnWHYgPfvcJd200805.shtml
 https://newnet.tw/Newsletter/comment.aspx?Iinfo=5&iNumber=30309
 https://newnet.tw/Newsletter/news.aspx?Iinfo=4&iNumber=28293
 https://www.aljazeera.com/news/2020/08/hong-kong-media-tycoon-arrested-security-law-200810000937967.html
+https://www.aljazeera.com/indepth/features/tale-isolations-200722114132821.html
